--- a/History of VietNam/src/com/project/application/Main.fxml
+++ b/History of VietNam/src/com/project/application/Main.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.application.MainController">
+<BorderPane fx:id="borderPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.project.application.MainController">
    <top>
       <GridPane hgap="10.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -22,7 +22,7 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <MenuButton fx:id="searchField" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="300.0" prefWidth="150.0" style="-fx-background-insets: 0;" text="Tìm kiếm theo" textFill="KHAKI">
+            <MenuButton fx:id="menuBtnSearchField" alignment="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="300.0" prefWidth="150.0" style="-fx-background-insets: 0;" text="Search for" textFill="KHAKI">
               <items>
                <MenuItem fx:id="menuItem1" mnemonicParsing="false" onAction="#clickMenuItem" text="Vua" />
                <MenuItem fx:id="menuItem2" mnemonicParsing="false" onAction="#clickMenuItem" text="Nhân Vật Lịch Sử" />
@@ -32,7 +32,7 @@
                <MenuItem fx:id="menuItem6" mnemonicParsing="false" onAction="#clickMenuItem" text="Sự kiện lịch sử" />
               </items>
             </MenuButton>
-            <TextField fx:id="textField" onKeyPressed="#pressEnter" prefHeight="300.0" prefWidth="398.0" promptText="Từ khóa..." GridPane.columnIndex="1">
+            <TextField fx:id="tfSearch" onKeyPressed="#pressEnter" prefHeight="300.0" prefWidth="398.0" promptText="Search" GridPane.columnIndex="1">
                <padding>
                   <Insets left="30.0" />
                </padding></TextField>
@@ -46,7 +46,7 @@
       
    </center>
    <bottom>
-      <Text id="Textcss" strokeType="OUTSIDE" strokeWidth="0.0" text="Lịch sử Việt Nam" BorderPane.alignment="CENTER">
+      <Text id="Textcss" strokeType="OUTSIDE" strokeWidth="0.0" text="History of Viet Nam" BorderPane.alignment="CENTER">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
